--- a/index.html
+++ b/index.html
@@ -255,16 +255,15 @@
   <!-- TREINAMENTOS -->
   <div id="telaTreinamentos" class="card hidden">
     <h2>Treinamentos</h2>    
-    <p class="small">Vídeos e documentos para capacitação:</p>
+    <p class="small">Programação para capacitação</p>
     <ul>
-      <li><a href="#" onclick="alert('Abrir vídeo (simulado)')"><strong>Vídeo: Segurança ao operar ferramentas:</strong></a> orientações práticas sobre uso correto de ferramentas manuais e elétricas, prevenindo acidentes e melhorando a eficiência.</li>
+      <li><strong>Primeira Semana:</strong> Segurança no trabalho e Normas da Obra. </li>
 
+      <li><strong>Segunda Semana:</strong> Execução de Alvenaria e Nivelamento.</li>
 
-      <li><a href="#" onclick="alert('Abrir PDF (simulado)')"><strong>PDF: Normas de EPIs:</strong></a> documento com diretrizes atualizadas sobre equipamentos obrigatórios, formas de uso, periodicidade de troca e conformidade com normas regulamentadoras.</li>
+      <li><strong>Terceira Semana:</strong> Revestimento e Instalação de Piso.</li>
 
-
-      <li><a href="#" onclick="alert('Abrir vídeo (simulado)')"><strong>Vídeo: Como nivelar parede:</strong></a> demonstração completa do processo de regularização de superfícies, aplicação de massa niveladora, verificação de prumo e correção de imperfeições.</li>
-
+      <li><strong>Quarta Semana:</strong> Organização, Controle e Produtividade.</li>
     </ul>
     <div style="margin-top:10px;">
       <button class="btn secondary" onclick="voltarMenu()">Voltar</button>
@@ -370,3 +369,4 @@
 
 </body>
 </html>
+
