--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Edu-Tech - Protótipo</title>
+  <title>Edu-Tech </title>
   <style>
     body { font-family: Arial, sans-serif; margin:0; background:#f5f5f5; }
     header { background:#1b6b37; color:white; padding:18px; text-align:center; }
@@ -26,7 +26,7 @@
 
 <header>
   <h1>Edu-Tech</h1>
-  <p>Profissionalização na Construção Civil</p>
+  <p>Construindo Profissionais Qualificados</p>
 </header>
 
 <div class="container">
@@ -47,7 +47,7 @@
   <!-- MENU PRINCIPAL -->
   <div id="telaMenu" class="card hidden">
     <h2>Menu principal</h2>
-<p class='img-desc'>Selecione uma das opções do menu e começe sua jornada na construção civil.</p>
+<p class='img-desc'>Selecione uma das opções do menu e comece sua jornada na construção civil.</p>
     <button class="menu-btn" onclick="abrirPOPs()">POPs</button>
     <button class="menu-btn" onclick="abrirRoteiro()">Roteiro do dia</button>
     <button class="menu-btn" onclick="abrirConteudo()">Conteúdos técnicos</button>
@@ -369,4 +369,5 @@
 
 </body>
 </html>
+
 
