--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Edu-Tech </title>
   <style>
+    /* Espaçamento entre linhas aplicado ao site inteiro */
+    body { line-height: 1.6; }
+
+
+    /* Espaçamento adicional em parágrafos */
+    p { line-height: 1.6; margin-bottom: 10px; }
+
+
+    
+    li { margin-bottom: 8px; line-height: 1.5; }
     body { font-family: Arial, sans-serif; margin:0; background:#f5f5f5; }
     header { background:#1b6b37; color:white; padding:18px; text-align:center; }
     .container { max-width:900px; margin:18px auto; padding:12px; }
@@ -41,7 +51,7 @@
     <div style="margin-top:8px;">
       <button class="btn" onclick="abrirMenu()">Entrar</button>
     </div>
-    <p class="small" style="margin-top:12px;">(Protótipo: qualquer e-mail/senha acessa)</p>
+    <p class="small" style="margin-top:12px;">(e-mail/senha acessa)</p>
   </div>
 
   <!-- MENU PRINCIPAL -->
@@ -369,5 +379,6 @@
 
 </body>
 </html>
+
 
 
